[gd_scene load_steps=2 format=3 uid="uid://dlel8p1wya1ju"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_7j6pf"]

[node name="Enemy_Spawner" type="Node3D"]
script = ExtResource("1_7j6pf")

[node name="Spawn1" type="Marker3D" parent="."]

[node name="Spawn2" type="Marker3D" parent="."]

[node name="Spawn3" type="Marker3D" parent="."]

[node name="Spawn4" type="Marker3D" parent="."]
